; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/amd/amdgpu/extr_dce_v6_0.c_dce_v6_0_set_crtc_vblank_interrupt_state.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/amd/amdgpu/extr_dce_v6_0.c_dce_v6_0_set_crtc_vblank_interrupt_state.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.amdgpu_device = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }

@.str = private unnamed_addr constant [17 x i8] c"invalid crtc %d\0A\00", align 1
@SI_CRTC0_REGISTER_OFFSET = common dso_local global i64 0, align 8
@SI_CRTC1_REGISTER_OFFSET = common dso_local global i64 0, align 8
@SI_CRTC2_REGISTER_OFFSET = common dso_local global i64 0, align 8
@SI_CRTC3_REGISTER_OFFSET = common dso_local global i64 0, align 8
@SI_CRTC4_REGISTER_OFFSET = common dso_local global i64 0, align 8
@SI_CRTC5_REGISTER_OFFSET = common dso_local global i64 0, align 8
@mmINT_MASK = common dso_local global i64 0, align 8
@VBLANK_INT_MASK = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.amdgpu_device*, i32, i32)* @dce_v6_0_set_crtc_vblank_interrupt_state to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @dce_v6_0_set_crtc_vblank_interrupt_state(%struct.amdgpu_device* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.amdgpu_device*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  store %struct.amdgpu_device* %0, %struct.amdgpu_device** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %9 = load i32, i32* %5, align 4
  %10 = load %struct.amdgpu_device*, %struct.amdgpu_device** %4, align 8
  %11 = getelementptr inbounds %struct.amdgpu_device, %struct.amdgpu_device* %10, i32 0, i32 0
  %12 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = icmp sge i32 %9, %13
  br i1 %14, label %15, label %18

15:                                               ; preds = %3
  %16 = load i32, i32* %5, align 4
  %17 = call i32 @DRM_DEBUG(i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str, i64 0, i64 0), i32 %16)
  br label %65

18:                                               ; preds = %3
  %19 = load i32, i32* %5, align 4
  switch i32 %19, label %32 [
    i32 0, label %20
    i32 1, label %22
    i32 2, label %24
    i32 3, label %26
    i32 4, label %28
    i32 5, label %30
  ]

20:                                               ; preds = %18
  %21 = load i64, i64* @SI_CRTC0_REGISTER_OFFSET, align 8
  store i64 %21, i64* %7, align 8
  br label %35

22:                                               ; preds = %18
  %23 = load i64, i64* @SI_CRTC1_REGISTER_OFFSET, align 8
  store i64 %23, i64* %7, align 8
  br label %35

24:                                               ; preds = %18
  %25 = load i64, i64* @SI_CRTC2_REGISTER_OFFSET, align 8
  store i64 %25, i64* %7, align 8
  br label %35

26:                                               ; preds = %18
  %27 = load i64, i64* @SI_CRTC3_REGISTER_OFFSET, align 8
  store i64 %27, i64* %7, align 8
  br label %35

28:                                               ; preds = %18
  %29 = load i64, i64* @SI_CRTC4_REGISTER_OFFSET, align 8
  store i64 %29, i64* %7, align 8
  br label %35

30:                                               ; preds = %18
  %31 = load i64, i64* @SI_CRTC5_REGISTER_OFFSET, align 8
  store i64 %31, i64* %7, align 8
  br label %35

32:                                               ; preds = %18
  %33 = load i32, i32* %5, align 4
  %34 = call i32 @DRM_DEBUG(i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str, i64 0, i64 0), i32 %33)
  br label %65

35:                                               ; preds = %30, %28, %26, %24, %22, %20
  %36 = load i32, i32* %6, align 4
  switch i32 %36, label %64 [
    i32 129, label %37
    i32 128, label %51
  ]

37:                                               ; preds = %35
  %38 = load i64, i64* @mmINT_MASK, align 8
  %39 = load i64, i64* %7, align 8
  %40 = add nsw i64 %38, %39
  %41 = call i64 @RREG32(i64 %40)
  store i64 %41, i64* %8, align 8
  %42 = load i64, i64* @VBLANK_INT_MASK, align 8
  %43 = xor i64 %42, -1
  %44 = load i64, i64* %8, align 8
  %45 = and i64 %44, %43
  store i64 %45, i64* %8, align 8
  %46 = load i64, i64* @mmINT_MASK, align 8
  %47 = load i64, i64* %7, align 8
  %48 = add nsw i64 %46, %47
  %49 = load i64, i64* %8, align 8
  %50 = call i32 @WREG32(i64 %48, i64 %49)
  br label %65

51:                                               ; preds = %35
  %52 = load i64, i64* @mmINT_MASK, align 8
  %53 = load i64, i64* %7, align 8
  %54 = add nsw i64 %52, %53
  %55 = call i64 @RREG32(i64 %54)
  store i64 %55, i64* %8, align 8
  %56 = load i64, i64* @VBLANK_INT_MASK, align 8
  %57 = load i64, i64* %8, align 8
  %58 = or i64 %57, %56
  store i64 %58, i64* %8, align 8
  %59 = load i64, i64* @mmINT_MASK, align 8
  %60 = load i64, i64* %7, align 8
  %61 = add nsw i64 %59, %60
  %62 = load i64, i64* %8, align 8
  %63 = call i32 @WREG32(i64 %61, i64 %62)
  br label %65

64:                                               ; preds = %35
  br label %65

65:                                               ; preds = %15, %32, %64, %51, %37
  ret void
}

declare dso_local i32 @DRM_DEBUG(i8*, i32) #1

declare dso_local i64 @RREG32(i64) #1

declare dso_local i32 @WREG32(i64, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
